# bta-2024-vote-analysis

./: README.md  pyproject.toml
.data/: awards.json  schools.json
src/bta_2024_vote_analysis/: __init__.py  __main__.py  adapters.py  analyzers.py  managers.py  models.py  reporters.py  utils.py
src/bta_2024_vote_analysis/adapters/: __init__.py
src/bta_2024_vote_analysis/adapters/input/: __init__.py  excel.py
src/bta_2024_vote_analysis/adapters/output/: __init__.py  json.py  markdown.py
src/bta_2024_vote_analysis/core/: models.py  ports.py  services.py
src/bta_2024_vote_analysis/infrastructure/: logging.py  persistence.py
